adjust body jumping issue when dialog is open

--- a/www/src/styles/globals/main-layout.scss
+++ b/www/src/styles/globals/main-layout.scss
@@ -1,3 +1,10 @@
+body {
+  &.no-scroll {
+    overflow: hidden;
+    width: calc(100vw - var(--scrollbar-width));
+  }
+}
+
 .container {
   --container-template-areas: ". head ." ". main .";
   --container-row-gap: var(--gap);
